[project]
name = "apiforge-ai"
version = "0.1.0"
description = "APIForge AI - Smart DevTool for API Integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "groq>=0.18.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.41.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
